# http-server

./: .gitignore  CMakeLists.txt  README  README.md  cli.c  main.c  main.h  parse_http.c  parse_http.h
src/: json_parse.c  json_parse.h  log.c  log.h  main.c  parse_http.c  parse_http.h  serialize_http.c  server.c  server.h  thread_pool.c  thread_pool.h
